name:                  amazonka-cloudformation
version:               1.5.0
synopsis:              Amazon CloudFormation SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2017 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.CloudFormation" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-cloudformation

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.CloudFormation
        , Network.AWS.CloudFormation.CancelUpdateStack
        , Network.AWS.CloudFormation.ContinueUpdateRollback
        , Network.AWS.CloudFormation.CreateChangeSet
        , Network.AWS.CloudFormation.CreateStack
        , Network.AWS.CloudFormation.CreateStackInstances
        , Network.AWS.CloudFormation.CreateStackSet
        , Network.AWS.CloudFormation.DeleteChangeSet
        , Network.AWS.CloudFormation.DeleteStack
        , Network.AWS.CloudFormation.DeleteStackInstances
        , Network.AWS.CloudFormation.DeleteStackSet
        , Network.AWS.CloudFormation.DescribeAccountLimits
        , Network.AWS.CloudFormation.DescribeChangeSet
        , Network.AWS.CloudFormation.DescribeStackEvents
        , Network.AWS.CloudFormation.DescribeStackInstance
        , Network.AWS.CloudFormation.DescribeStackResource
        , Network.AWS.CloudFormation.DescribeStackResources
        , Network.AWS.CloudFormation.DescribeStackSet
        , Network.AWS.CloudFormation.DescribeStackSetOperation
        , Network.AWS.CloudFormation.DescribeStacks
        , Network.AWS.CloudFormation.EstimateTemplateCost
        , Network.AWS.CloudFormation.ExecuteChangeSet
        , Network.AWS.CloudFormation.GetStackPolicy
        , Network.AWS.CloudFormation.GetTemplate
        , Network.AWS.CloudFormation.GetTemplateSummary
        , Network.AWS.CloudFormation.ListChangeSets
        , Network.AWS.CloudFormation.ListExports
        , Network.AWS.CloudFormation.ListImports
        , Network.AWS.CloudFormation.ListStackInstances
        , Network.AWS.CloudFormation.ListStackResources
        , Network.AWS.CloudFormation.ListStackSetOperationResults
        , Network.AWS.CloudFormation.ListStackSetOperations
        , Network.AWS.CloudFormation.ListStackSets
        , Network.AWS.CloudFormation.ListStacks
        , Network.AWS.CloudFormation.SetStackPolicy
        , Network.AWS.CloudFormation.SignalResource
        , Network.AWS.CloudFormation.StopStackSetOperation
        , Network.AWS.CloudFormation.Types
        , Network.AWS.CloudFormation.UpdateStack
        , Network.AWS.CloudFormation.UpdateStackSet
        , Network.AWS.CloudFormation.UpdateTerminationProtection
        , Network.AWS.CloudFormation.ValidateTemplate
        , Network.AWS.CloudFormation.Waiters

    other-modules:
          Network.AWS.CloudFormation.Types.Product
        , Network.AWS.CloudFormation.Types.Sum

    build-depends:
          amazonka-core == 1.5.0.*
        , base          >= 4.7     && < 5

test-suite amazonka-cloudformation-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.CloudFormation
        , Test.AWS.Gen.CloudFormation
        , Test.AWS.CloudFormation.Internal

    build-depends:
          amazonka-core == 1.5.0.*
        , amazonka-test == 1.5.0.*
        , amazonka-cloudformation
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
