cabal-version:      2.2
name:               amazonka-cloudformation
version:            1.6.1
synopsis:           Amazon CloudFormation SDK.
homepage:           https://github.com/brendanhay/amazonka
bug-reports:        https://github.com/brendanhay/amazonka/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:          Copyright (c) 2013-2021 Brendan Hay
category:           AWS
build-type:         Simple
extra-source-files:
  fixture/*.proto
  fixture/*.yaml
  README.md
  src/.gitkeep

description:
  Derived from API version @2010-05-15@ of the AWS service descriptions, licensed under Apache 2.0.
  .
  The types from this library are intended to be used with <http://hackage.haskell.org/package/amazonka amazonka>,
  which provides mechanisms for specifying AuthN/AuthZ information, sending requests, and receiving responses.
  .
  It is recommended to use generic lenses or optics from packages such as <https://hackage.haskell.org/package/generic-lens generic-lens> or <https://hackage.haskell.org/package/optics optics> to modify optional fields and deconstruct responses.
  .
  Generated lenses for legacy behaviour can be found in "Network.AWS.CloudFormation.Lens"
  and are suitable for use with a lens package such as <http://hackage.haskell.org/package/lens lens> or <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
  .
  Additional types and functions from <https://hackage.haskell.org/package/amazonka-core amazonka-core> are re-exported by the "Network.AWS.Prelude" module in this package.
  .
  See "Network.AWS.CloudFormation" and the <https://aws.amazon.com/documentation/ AWS documentation> to get started.

source-repository head
  type:     git
  location: git://github.com/brendanhay/amazonka.git
  subdir:   amazonka-cloudformation

library
  default-language:   Haskell2010
  hs-source-dirs:     src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  exposed-modules:
    Network.AWS.CloudFormation
    Network.AWS.CloudFormation.ActivateType
    Network.AWS.CloudFormation.BatchDescribeTypeConfigurations
    Network.AWS.CloudFormation.CancelUpdateStack
    Network.AWS.CloudFormation.ContinueUpdateRollback
    Network.AWS.CloudFormation.CreateChangeSet
    Network.AWS.CloudFormation.CreateStack
    Network.AWS.CloudFormation.CreateStackInstances
    Network.AWS.CloudFormation.CreateStackSet
    Network.AWS.CloudFormation.DeactivateType
    Network.AWS.CloudFormation.DeleteChangeSet
    Network.AWS.CloudFormation.DeleteStack
    Network.AWS.CloudFormation.DeleteStackInstances
    Network.AWS.CloudFormation.DeleteStackSet
    Network.AWS.CloudFormation.DeregisterType
    Network.AWS.CloudFormation.DescribeAccountLimits
    Network.AWS.CloudFormation.DescribeChangeSet
    Network.AWS.CloudFormation.DescribePublisher
    Network.AWS.CloudFormation.DescribeStackDriftDetectionStatus
    Network.AWS.CloudFormation.DescribeStackEvents
    Network.AWS.CloudFormation.DescribeStackInstance
    Network.AWS.CloudFormation.DescribeStackResource
    Network.AWS.CloudFormation.DescribeStackResourceDrifts
    Network.AWS.CloudFormation.DescribeStackResources
    Network.AWS.CloudFormation.DescribeStacks
    Network.AWS.CloudFormation.DescribeStackSet
    Network.AWS.CloudFormation.DescribeStackSetOperation
    Network.AWS.CloudFormation.DescribeType
    Network.AWS.CloudFormation.DescribeTypeRegistration
    Network.AWS.CloudFormation.DetectStackDrift
    Network.AWS.CloudFormation.DetectStackResourceDrift
    Network.AWS.CloudFormation.DetectStackSetDrift
    Network.AWS.CloudFormation.EstimateTemplateCost
    Network.AWS.CloudFormation.ExecuteChangeSet
    Network.AWS.CloudFormation.GetStackPolicy
    Network.AWS.CloudFormation.GetTemplate
    Network.AWS.CloudFormation.GetTemplateSummary
    Network.AWS.CloudFormation.ImportStacksToStackSet
    Network.AWS.CloudFormation.Lens
    Network.AWS.CloudFormation.ListChangeSets
    Network.AWS.CloudFormation.ListExports
    Network.AWS.CloudFormation.ListImports
    Network.AWS.CloudFormation.ListStackInstances
    Network.AWS.CloudFormation.ListStackResources
    Network.AWS.CloudFormation.ListStacks
    Network.AWS.CloudFormation.ListStackSetOperationResults
    Network.AWS.CloudFormation.ListStackSetOperations
    Network.AWS.CloudFormation.ListStackSets
    Network.AWS.CloudFormation.ListTypeRegistrations
    Network.AWS.CloudFormation.ListTypes
    Network.AWS.CloudFormation.ListTypeVersions
    Network.AWS.CloudFormation.PublishType
    Network.AWS.CloudFormation.RecordHandlerProgress
    Network.AWS.CloudFormation.RegisterPublisher
    Network.AWS.CloudFormation.RegisterType
    Network.AWS.CloudFormation.RollbackStack
    Network.AWS.CloudFormation.SetStackPolicy
    Network.AWS.CloudFormation.SetTypeConfiguration
    Network.AWS.CloudFormation.SetTypeDefaultVersion
    Network.AWS.CloudFormation.SignalResource
    Network.AWS.CloudFormation.StopStackSetOperation
    Network.AWS.CloudFormation.TestType
    Network.AWS.CloudFormation.Types
    Network.AWS.CloudFormation.Types.AccountGateResult
    Network.AWS.CloudFormation.Types.AccountGateStatus
    Network.AWS.CloudFormation.Types.AccountLimit
    Network.AWS.CloudFormation.Types.AutoDeployment
    Network.AWS.CloudFormation.Types.BatchDescribeTypeConfigurationsError
    Network.AWS.CloudFormation.Types.CallAs
    Network.AWS.CloudFormation.Types.Capability
    Network.AWS.CloudFormation.Types.Category
    Network.AWS.CloudFormation.Types.Change
    Network.AWS.CloudFormation.Types.ChangeAction
    Network.AWS.CloudFormation.Types.ChangeSetStatus
    Network.AWS.CloudFormation.Types.ChangeSetSummary
    Network.AWS.CloudFormation.Types.ChangeSetType
    Network.AWS.CloudFormation.Types.ChangeSource
    Network.AWS.CloudFormation.Types.ChangeType
    Network.AWS.CloudFormation.Types.DeploymentTargets
    Network.AWS.CloudFormation.Types.DeprecatedStatus
    Network.AWS.CloudFormation.Types.DifferenceType
    Network.AWS.CloudFormation.Types.EvaluationType
    Network.AWS.CloudFormation.Types.ExecutionStatus
    Network.AWS.CloudFormation.Types.Export
    Network.AWS.CloudFormation.Types.HandlerErrorCode
    Network.AWS.CloudFormation.Types.IdentityProvider
    Network.AWS.CloudFormation.Types.LoggingConfig
    Network.AWS.CloudFormation.Types.ModuleInfo
    Network.AWS.CloudFormation.Types.OnFailure
    Network.AWS.CloudFormation.Types.OperationStatus
    Network.AWS.CloudFormation.Types.Output
    Network.AWS.CloudFormation.Types.Parameter
    Network.AWS.CloudFormation.Types.ParameterConstraints
    Network.AWS.CloudFormation.Types.ParameterDeclaration
    Network.AWS.CloudFormation.Types.PermissionModels
    Network.AWS.CloudFormation.Types.PhysicalResourceIdContextKeyValuePair
    Network.AWS.CloudFormation.Types.PropertyDifference
    Network.AWS.CloudFormation.Types.ProvisioningType
    Network.AWS.CloudFormation.Types.PublisherStatus
    Network.AWS.CloudFormation.Types.RegionConcurrencyType
    Network.AWS.CloudFormation.Types.RegistrationStatus
    Network.AWS.CloudFormation.Types.RegistryType
    Network.AWS.CloudFormation.Types.Replacement
    Network.AWS.CloudFormation.Types.RequiredActivatedType
    Network.AWS.CloudFormation.Types.RequiresRecreation
    Network.AWS.CloudFormation.Types.ResourceAttribute
    Network.AWS.CloudFormation.Types.ResourceChange
    Network.AWS.CloudFormation.Types.ResourceChangeDetail
    Network.AWS.CloudFormation.Types.ResourceIdentifierSummary
    Network.AWS.CloudFormation.Types.ResourceSignalStatus
    Network.AWS.CloudFormation.Types.ResourceStatus
    Network.AWS.CloudFormation.Types.ResourceTargetDefinition
    Network.AWS.CloudFormation.Types.ResourceToImport
    Network.AWS.CloudFormation.Types.RollbackConfiguration
    Network.AWS.CloudFormation.Types.RollbackTrigger
    Network.AWS.CloudFormation.Types.Stack
    Network.AWS.CloudFormation.Types.StackDriftDetectionStatus
    Network.AWS.CloudFormation.Types.StackDriftInformation
    Network.AWS.CloudFormation.Types.StackDriftInformationSummary
    Network.AWS.CloudFormation.Types.StackDriftStatus
    Network.AWS.CloudFormation.Types.StackEvent
    Network.AWS.CloudFormation.Types.StackInstance
    Network.AWS.CloudFormation.Types.StackInstanceComprehensiveStatus
    Network.AWS.CloudFormation.Types.StackInstanceDetailedStatus
    Network.AWS.CloudFormation.Types.StackInstanceFilter
    Network.AWS.CloudFormation.Types.StackInstanceFilterName
    Network.AWS.CloudFormation.Types.StackInstanceStatus
    Network.AWS.CloudFormation.Types.StackInstanceSummary
    Network.AWS.CloudFormation.Types.StackResource
    Network.AWS.CloudFormation.Types.StackResourceDetail
    Network.AWS.CloudFormation.Types.StackResourceDrift
    Network.AWS.CloudFormation.Types.StackResourceDriftInformation
    Network.AWS.CloudFormation.Types.StackResourceDriftInformationSummary
    Network.AWS.CloudFormation.Types.StackResourceDriftStatus
    Network.AWS.CloudFormation.Types.StackResourceSummary
    Network.AWS.CloudFormation.Types.StackSet
    Network.AWS.CloudFormation.Types.StackSetDriftDetectionDetails
    Network.AWS.CloudFormation.Types.StackSetDriftDetectionStatus
    Network.AWS.CloudFormation.Types.StackSetDriftStatus
    Network.AWS.CloudFormation.Types.StackSetOperation
    Network.AWS.CloudFormation.Types.StackSetOperationAction
    Network.AWS.CloudFormation.Types.StackSetOperationPreferences
    Network.AWS.CloudFormation.Types.StackSetOperationResultStatus
    Network.AWS.CloudFormation.Types.StackSetOperationResultSummary
    Network.AWS.CloudFormation.Types.StackSetOperationStatus
    Network.AWS.CloudFormation.Types.StackSetOperationSummary
    Network.AWS.CloudFormation.Types.StackSetStatus
    Network.AWS.CloudFormation.Types.StackSetSummary
    Network.AWS.CloudFormation.Types.StackStatus
    Network.AWS.CloudFormation.Types.StackSummary
    Network.AWS.CloudFormation.Types.Tag
    Network.AWS.CloudFormation.Types.TemplateParameter
    Network.AWS.CloudFormation.Types.TemplateStage
    Network.AWS.CloudFormation.Types.ThirdPartyType
    Network.AWS.CloudFormation.Types.TypeConfigurationDetails
    Network.AWS.CloudFormation.Types.TypeConfigurationIdentifier
    Network.AWS.CloudFormation.Types.TypeFilters
    Network.AWS.CloudFormation.Types.TypeSummary
    Network.AWS.CloudFormation.Types.TypeTestsStatus
    Network.AWS.CloudFormation.Types.TypeVersionSummary
    Network.AWS.CloudFormation.Types.VersionBump
    Network.AWS.CloudFormation.Types.Visibility
    Network.AWS.CloudFormation.UpdateStack
    Network.AWS.CloudFormation.UpdateStackInstances
    Network.AWS.CloudFormation.UpdateStackSet
    Network.AWS.CloudFormation.UpdateTerminationProtection
    Network.AWS.CloudFormation.ValidateTemplate
    Network.AWS.CloudFormation.Waiters

  reexported-modules: Network.AWS
  build-depends:
    , amazonka  >=1.6.1 && <1.6.2
    , base      >=4.12  && <5

test-suite amazonka-cloudformation-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded

  -- This section is encoded by the template and any modules added by
  -- hand outside these namespaces will not correctly be added to the
  -- distribution package.
  other-modules:
    Test.AWS.CloudFormation
    Test.AWS.CloudFormation.Internal
    Test.AWS.Gen.CloudFormation

  build-depends:
    , amazonka                 >=1.6.1 && <1.6.2
    , amazonka-cloudformation
    , amazonka-test            >=1.6.1 && <1.6.2
    , base
    , bytestring
    , case-insensitive
    , tasty
    , tasty-hunit
    , text
    , time
    , unordered-containers
