name:                  amazonka-cloudfront
version:               1.4.5
synopsis:              Amazon CloudFront SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2016 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.CloudFront" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.AWS.CloudFront
        , Network.AWS.CloudFront.CreateCloudFrontOriginAccessIdentity
        , Network.AWS.CloudFront.CreateDistribution
        , Network.AWS.CloudFront.CreateDistributionWithTags
        , Network.AWS.CloudFront.CreateInvalidation
        , Network.AWS.CloudFront.CreateStreamingDistribution
        , Network.AWS.CloudFront.CreateStreamingDistributionWithTags
        , Network.AWS.CloudFront.DeleteCloudFrontOriginAccessIdentity
        , Network.AWS.CloudFront.DeleteDistribution
        , Network.AWS.CloudFront.DeleteStreamingDistribution
        , Network.AWS.CloudFront.GetCloudFrontOriginAccessIdentity
        , Network.AWS.CloudFront.GetCloudFrontOriginAccessIdentityConfig
        , Network.AWS.CloudFront.GetDistribution
        , Network.AWS.CloudFront.GetDistributionConfig
        , Network.AWS.CloudFront.GetInvalidation
        , Network.AWS.CloudFront.GetStreamingDistribution
        , Network.AWS.CloudFront.GetStreamingDistributionConfig
        , Network.AWS.CloudFront.ListCloudFrontOriginAccessIdentities
        , Network.AWS.CloudFront.ListDistributions
        , Network.AWS.CloudFront.ListDistributionsByWebACLId
        , Network.AWS.CloudFront.ListInvalidations
        , Network.AWS.CloudFront.ListStreamingDistributions
        , Network.AWS.CloudFront.ListTagsForResource
        , Network.AWS.CloudFront.TagResource
        , Network.AWS.CloudFront.Types
        , Network.AWS.CloudFront.UntagResource
        , Network.AWS.CloudFront.UpdateCloudFrontOriginAccessIdentity
        , Network.AWS.CloudFront.UpdateDistribution
        , Network.AWS.CloudFront.UpdateStreamingDistribution
        , Network.AWS.CloudFront.Waiters

    other-modules:
          Network.AWS.CloudFront.Types.Product
        , Network.AWS.CloudFront.Types.Sum

    build-depends:
          amazonka-core == 1.4.5.*
        , base          >= 4.7     && < 5

test-suite amazonka-cloudfront-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.CloudFront
        , Test.AWS.Gen.CloudFront
        , Test.AWS.CloudFront.Internal

    build-depends:
          amazonka-core == 1.4.5.*
        , amazonka-test == 1.4.5.*
        , amazonka-cloudfront == 1.4.5.*
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
